# cavo789-blog

.unpublished/accessing-ollama-accross-your-local-network/: index.md
.unpublished/ollama-refactor-code/files/: .dockerignore  Dockerfile  dumpfiles.sh  dumpfiles.txt  pyproject.toml  readme.md
.unpublished/ollama-refactor-code/files/.devcontainer/: Dockerfile  devcontainer.json
.unpublished/ollama-refactor-code/files/config/: settings.yaml  system_prompt.txt
.unpublished/ollama-refactor-code/files/src/: analyzer.py  diff_engine.py  git_utils.py  main.py  ollama_client.py
blog/2026/04/13/assets-minifcation/: index.md
blog/2026/04/20/docker-python-mermaid/: index.md
blog/2026/04/27/ssh_with_fzf/: index.md
blog/2026/04/27/ssh_with_fzf/files/: amazing.conf  legacy.conf  sshf.zsh  sshf_actions.zsh
